# HME

./: .gitignore  LICENSE  README.md  TRAINING.md  pyproject.toml  readme.md  requirements.txt
notebooks/: download_checkpoints.ipynb  notebook.ipynb  training.ipynb
scripts/: download_models.sh  ds_zero2_no_offload.json  eval_captioning.sh  eval_general-qa.sh  eval_pocket-based-ligand-generation.sh  eval_property-qa-1.sh  eval_property-qa-2.sh  merge.sh  run_zero2-property-qa-2.sh  run_zero2_captioning.sh  run_zero2_comprehension-pretrain-s2.sh  run_zero2_comprehension-pretrain.sh  run_zero2_description-based-mol-gen.sh  run_zero2_description-based-mol-gen_pretrain.sh  run_zero2_general-qa.sh  run_zero2_pocket-based-ligand-generation.sh  run_zero2_pocket-based-ligand-generation_pretrain.sh  run_zero2_property-qa-1.sh
src/: configuration_llava.py  data.py  frg.py  infer.py  modeling_llava.py  modeling_tower.py  preprocess.py  util.py
src/datasets/: readme.md
src/fragment_vocabs/: vocab_800_multi_obj_mol_design.txt  vocab_80_other_tasks.txt
src/hme/: configuration_llava.py  data.py  download_models.py  frg.py  infer.py  merge.py  modeling_llava.py  modeling_tower.py  preprocess_mol.py  preprocess_prot.py  run_classification.py  run_clm.py  run_regression.py  util.py
src/hme/metrics/: mol2text_metrics.py  number_metrics.py  text2mol_metrics.py
src/hme/psvae/: chem_utils.py  mol_bpe.py  molecule.py
src/metrics/: mol2text_metrics.py  number_metrics.py  text2mol_metrics.py
src/psvae/: chem_utils.py  mol_bpe.py  molecule.py
src/scripts/: eval.sh
tutorials/: data_preprocess.ipynb  evaluation.ipynb  merge_checkpoints.ipynb  reproduce.ipynb
