[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hme-model"  # 你希望在pip上显示的名字
version = "0.1.0"
authors = [
  { name="Liuzhenghao Lv", email="lvliuzh@stu.pku.edu.cn" },
]
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch==2.5.1",
    "torch-geometric==2.6.1",
    "transformers==4.43.1",
    "deepspeed==0.15.2",
    "ogb==1.2.0",
    "unimol-tools==0.1.3.post1",
    "rdkit==2022.9.4",
    "flash_attn==2.7.4.post1",
    "einops==0.8.1",
    "scikit-learn==1.5.0",
    "pandas==1.4.0",
    "scipy==1.14.1",
    "sentencepiece==0.2.0",
    "protobuf==6.31.1",
    "huggingface-hub==0.32.2"
]

[tool.setuptools.packages.find]
where = ["src"]  


[tool.setuptools.package-data]

hme = ["fragment_vocabs/*.txt"]