[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hme" 
version = "0.1.0"
authors = [
  { name="Liuzhenghao Lv", email="lvliuzh@stu.pku.edu.cn" },
]
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch==2.5.1",
    "torch-geometric==2.6.1",
    "transformers==4.43.1",
    "deepspeed==0.15.2",
    "ogb==1.2.0",
    "unimol-tools==0.1.3.post1",
    "rdkit==2022.9.4",
    "einops==0.8.1",
    "scikit-learn==1.5.0",
    "pandas==1.4.0",
    "scipy==1.14.1",
    "sentencepiece==0.2.0",
    "protobuf==6.31.1",
    "huggingface-hub==0.32.2",
    "peft==0.15.1",
    "accelerate==1.7.0",
    "periodictable==2.0.2",
    "ipykernel==6.29.5",
    "nltk==3.9.1",
    "rouge_score==0.1.2",
    "fcd_torch==1.0.7",
    "Levenshtein==0.27.1",
    #"flash_attn==2.7.4.post1",
]

[tool.setuptools.packages.find]
where = ["src"]  


[tool.setuptools.package-data]

hme = ["fragment_vocabs/*.txt"]
